tdf#89954 sw: let annotation have CH_TXTATR_INWORD placeholder again

Regression from commit 0761f81643a6890457e9ef7d913ab5c88c2593a4 (123792:
complete annotations on text ranges feature, 2013-12-19), the problem
was that while sw wanted CH_TXTATR_INWORD as a placeholder character for
anchor positions that do not count as a word boundary, the commit
changed GetCharOfTextAttr() so that annotations have CH_TXTATR_BREAKWORD
as the placeholder.

Fix the problem by reverting the last hunk of
sw/source/core/txtnode/thints.cxx changes in that commit.

(cherry picked from commit 89d615360e80a13fff6bc69885e5780d8fedf149)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: Ia8c97efda9c1e90ae3c27ddb8247e3f3203a63fb
Reviewed-on: https://gerrit.libreoffice.org/17621
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>